<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0B0A0A"
        android:orientation="vertical">

        <Button
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#F4EBEB"
            android:onClick="about"
            android:text="@string/about"
            android:textColor="#0A0B0B"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_my_calendar"
            app:iconPadding="10dp"
            app:iconTint="#090809" />

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F2F2"
            android:onClick="home"
            android:text="@string/home"
            android:textColor="#090909"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_myplaces"
            app:iconPadding="10dp"
            app:iconTint="#4CDF16"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#F1EEEE"
            android:onClick="openContact"
            android:text="@string/contact"
            android:textColor="#070707"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_dialog_email"
            app:iconPadding="10dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="530dp">

        </WebView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="123dp"
                android:layout_height="match_parent"
                android:background="#EDEDED"
                android:contentDescription="@string/back"
                android:onClick="back"
                app:srcCompat="@drawable/back"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/reload"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:background="#D4D6DC"
                android:contentDescription="@string/reload"
                android:onClick="reLoad"
                app:srcCompat="@drawable/reloead"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E4E6EF"
                android:contentDescription="@string/next"
                android:onClick="next"
                app:srcCompat="@drawable/forward"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>